2010-08-10  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Darin Adler.

        2d.path.clip.empty.html test is failing
        https://bugs.webkit.org/show_bug.cgi?id=43161

        * platform/mac/Skipped: Unskipping now passing path.clip.empty
2010-08-10  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Darin Adler.

        2d.path.clip.empty.html test is failing
        https://bugs.webkit.org/show_bug.cgi?id=43161

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::clip):
        Catching the empty path case from being sent directly to
        CGContextClip - which would ignore it. Instead, using
        CGContextClip with a CGRectZero to achieve the desired
        behavior of reducing the clipping region to nothing.

Canonical link: https://commits.webkit.org/55920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65118 268f45cc-cd09-0410-ab3c-d52691b4dbfc